create angular project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ng-currency-words": [
+        "dist/ng-currency-words/ng-currency-words",
+        "dist/ng-currency-words"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
