--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shumih/ng-currency-words",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 5007",
@@ -28,18 +28,18 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.2",
-    "@angular-devkit/build-ng-packagr": "~0.900.7",
-    "@angular/cli": "~9.0.2",
-    "@angular/compiler-cli": "~9.0.1",
-    "@angular/language-service": "~9.0.1",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.901.6",
+    "@angular/cli": "^9.1.6",
+    "@angular-devkit/build-ng-packagr": "^0.901.6",
+    "@angular/compiler-cli": "^9.1.7",
+    "@angular/language-service": "^9.1.7",
+    "@types/node": "^12.12.39",
     "codelyzer": "^5.1.2",
-    "ng-packagr": "^9.0.0",
+    "ng-packagr": "^9.1.3",
     "prettier": "^2.0.5",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
